<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:id="@+id/mainLinearLayout" 
			  android:layout_width="fill_parent" 
			  android:layout_height="fill_parent"
			  android:orientation="vertical">
	<TableLayout android:id="@+id/table1" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:gravity="center_horizontal">
		
		<TableRow android:id="@+id/configRow" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:gravity="center">
		    <Button android:id="@+id/wifiButton" 
	            android:layout_width="160dp" 
	            android:layout_height="wrap_content" 
	            android:text="@string/wifi_button" 
	            android:textStyle="bold"
	            android:textSize="24dp"/>
	        <Button android:id="@+id/g3Button" 
	            android:layout_width="160dp" 
	            android:layout_height="wrap_content"
	            android:text="@string/g3_button" 
	            android:textStyle="bold"
	            android:textSize="24dp"/>
		</TableRow>
		
		<TableRow android:id="@+id/imageRow" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:gravity="center" android:layout_gravity="right"
		android:layout_marginTop="10px">
		    <ImageView android:id="@+id/wifiImage"
		            android:src="@drawable/wifi_start" 
		 		    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:clickable="true" 
					android:layout_gravity="center|right"/>
			 <ImageView android:id="@+id/g3Image"
		            android:src="@drawable/g3_stop" 
		 		    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:clickable="true" android:layout_gravity="center|right"/>
		</TableRow>
	</TableLayout>
	
	
	<TableLayout android:id="@+id/table2" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:gravity="center_horizontal"
		android:layout_marginTop="50px">
		<TableRow android:id="@+id/upRateRow" 
				  android:layout_width="fill_parent" 
				  android:layout_height="wrap_content">
			<TextView
			android:id="@+id/trafficUpLabel"
			android:layout_width="90dp"
			android:layout_height="wrap_content"
			android:text="@string/label_uprate"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold" 
			/>
			<TextView
			android:id="@+id/wifiTrafficUpRate"
			android:layout_height="wrap_content"
			android:layout_width="110dp"
			android:text="@string/figure_default"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold"/>
			<TextView
			android:id="@+id/g3TrafficUpRate"
			android:layout_height="wrap_content"
			android:layout_width="110dp"
			android:text="@string/figure_default"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold"
			android:layout_gravity="center|right"/>	 	  
		</TableRow>
		
		<TableRow android:id="@+id/downRateRow" 
				  android:layout_width="fill_parent" 
				  android:layout_height="wrap_content">
			<TextView
			android:id="@+id/trafficDownLabel"
			android:layout_width="90dp"
			android:layout_height="wrap_content"
			android:text="@string/label_downrate"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold" 
			/>
			<TextView
			android:id="@+id/wifiTrafficDownRate"
			android:layout_height="wrap_content"
			android:layout_width="110dp"
			android:text="@string/figure_default"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold"/>
			<TextView
			android:id="@+id/g3TrafficDownRate"
			android:layout_height="wrap_content"
			android:layout_width="110dp"
			android:text="@string/figure_default"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold"
			android:layout_gravity="center|right"/>	 	  
		</TableRow>
		
		<TableRow android:id="@+id/TCPStatisRow" 
				  android:layout_width="fill_parent" 
				  android:layout_height="wrap_content"
				  android:layout_marginTop="20px">
			<TextView
			android:id="@+id/TCPLabel"
			android:layout_width="90dp"
			android:layout_height="wrap_content"
			android:text="@string/label_tcp"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold" 
			/>
			<TextView
			android:id="@+id/TCPFlows"
			android:layout_height="wrap_content"
			android:layout_width="110dp"
			android:text="@string/flow_default"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold"/>
			<TextView
			android:id="@+id/TCPBytes"
			android:layout_height="wrap_content"
			android:layout_width="110dp"
			android:text="@string/bytes_default"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold"
			android:layout_gravity="center|right"/>	 	  
		</TableRow>
		
		<TableRow android:id="@+id/UDPStatisRow" 
				  android:layout_width="fill_parent" 
				  android:layout_height="wrap_content">
			<TextView
			android:id="@+id/UDPLabel"
			android:layout_width="90dp"
			android:layout_height="wrap_content"
			android:text="@string/label_udp"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold" 
			/>
			<TextView
			android:id="@+id/UDPFlows"
			android:layout_height="wrap_content"
			android:layout_width="110dp"
			android:text="@string/flow_default"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold"/>
			<TextView
			android:id="@+id/UDPBytes"
			android:layout_height="wrap_content"
			android:layout_width="110dp"
			android:text="@string/bytes_default"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold"
			android:layout_gravity="center|right"/>	 	  
		</TableRow>
		
		<TableRow android:id="@+id/OtherStatisRow" 
				  android:layout_width="fill_parent" 
				  android:layout_height="wrap_content">
			<TextView
			android:id="@+id/OtherLabel"
			android:layout_width="90dp"
			android:layout_height="wrap_content"
			android:text="@string/label_other"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold" 
			/>
			<TextView
			android:id="@+id/OtherFlows"
			android:layout_height="wrap_content"
			android:layout_width="110dp"
			android:text="@string/flow_default"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold"/>
			<TextView
			android:id="@+id/OtherBytes"
			android:layout_height="wrap_content"
			android:layout_width="110dp"
			android:text="@string/bytes_default"
			android:textColor="@color/white"
			android:textSize="22dp"
			android:textStyle="bold"
			android:layout_gravity="center|right"/>	 	  
		</TableRow>
	</TableLayout>	
	<ToggleButton android:id="@+id/trafficMonitorButton"
        		  android:layout_width="fill_parent"
        		  android:layout_height="wrap_content"
        		  android:textOn="@string/on_text"
        		  android:textOff="@string/off_text"
        		  android:layout_marginTop="80px"
        		  android:layout_alignParentBottom="true"/>
</LinearLayout>
